mySelect.js myScrollBar.js bug 修复

--- a/mySelect/mySelect.css
+++ b/mySelect/mySelect.css
@@ -1,10 +1,12 @@
 .mySelect {
 	position: relative;
 	display: inline-block;
+	vertical-align: middle
+	z-index: 100;
 }
 .mySelect .mySelect_show {
     height: 18px;
-    padding: 6px 30px 6px 12px;
+    padding: 6px 30px 6px 16px;
     font-size: 14px;
     line-height: 1.42857143;
     color: rgb(51,51,51);
@@ -19,13 +21,14 @@
 	font-size: 14px;
     line-height: 1.42857143;
     font-weight: normal;
+    text-align: left;
 }
 .mySelect .up, .mySelect .down{
 	display: inline-block;
 	position: absolute;
 	height: 0; width: 0;
 	border-style: solid;
-	border-width: 5px;
+	border-width: 4px;
 	right: 12px;
 }
 .mySelect .up {
@@ -36,12 +39,13 @@
 	top:15px;
 	border-color: rgb(57,143,230) transparent transparent transparent;
 }
-.mySelect ul {
+.mySelect .mySelect_listDown {
+	display: none;
 	background-color: rgba(236,236,236,0.95);
 	cursor:default;
 	overflow: hidden;
-	position: absolute;
-	z-index: 5;	
+	position: absolute !important;
+	z-index: 3000;
 }
 .mySelect .mySelect_list{
 	position: relative;
@@ -52,11 +56,12 @@
     display: block;
     white-space: pre;
    	height: 32px;
-   	line-height: 34px;
-    padding: 0 12px;
+   	line-height: 32px;
+    padding: 0 16px;
    	font-size: 14px;
    	color: rgb(125,125,125);
    	overflow: hidden;
+   	text-align: left;
 }
 .mySelect li:hover {
 	background-color: rgb(219,219,219);
@@ -67,9 +72,11 @@
 	background-color: #B3B3B3;
 	top:0;right: 0;
 	cursor: pointer;
+	display: none;
 }
 .myDisabled {
 	opacity: .65;
+	cursor: not-allowed;
 }
 .myDisabled .mySelect_show {
 	cursor: not-allowed;
